# l1br3-prompt

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Justfile  LICENSE  README.md  requirements.md
.claude/: claude.yaml  settings.local.json
.claude/agents/: ai-orchestrator.yaml  backend-architect.yaml  docs-writer.yaml  frontend-sidebar.yaml  planner.yaml  sprint-planner.yaml  sync-engineer.yaml
.claude/commands/: capability.md  create-react-component.md  generate-endpoint.md  plan.md  sprint-plan.md  sprint-status.md  sprint-update.md  update-openapi.md  verify.md
.claude/memories/: glossary.md  phase-status.md  spec-notes.md  sprint_plan_current.md
.claude/plans/: phase-4.md
.claude/rules/: code-style.md  workflow.md
.claude/skills/: fastapi.md  ollama-integration.md  product-capability.md  project-flow-ops.md  pydantic-v2.md  strategic-compact.md  wxt.md  (+1 more)
api/: .gitignore  build.sh  l1br3.spec  pyproject.toml
api/app/: main.py  mcp_server.py
api/app/db/: base.py  engine.py
api/app/models/: __init__.py  prompt.py  tag.py
api/app/repositories/: base.py  prompt_repo.py  tag_repo.py
api/app/routes/: __init__.py  ai.py  categories.py  generate.py  health.py  prompts.py  suggestions.py
api/app/schemas/: ai.py  envelope.py  prompt.py  suggestion.py  tag.py
api/app/services/: category_service.py  prompt_service.py  suggestion_service.py  template_service.py
api/app/services/ai/: cloud.py  factory.py  ollama.py  provider.py
api/migrations/: env.py
api/migrations/versions/: 001_initial.py  002_add_soft_delete.py
api/tests/: conftest.py  test_ai_factory.py  test_ai_provider.py  test_ai_routes.py  test_categories.py  test_cloud_provider.py  test_generate.py  test_generate_cloud.py  test_health.py  test_mcp_server.py  test_prompts.py  test_soft_delete.py  test_suggestions.py  test_template_service.py
browser-ext/: .eslintrc.js  package.json  pnpm-lock.yaml  postcss.config.js  tailwind.config.js  wxt.config.ts
docs/: backend-onboarding-plan.md  cloud-ai-setup.md  cloud-ai.md  supabase-setup.md
supabase/: schema.sql
(+50 files in other folders)
