[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "fastapi>=0.135.3",
    "httpx>=0.28",
    "jinja2>=3.1",
    "mcp>=1.0",
    "pydantic>=2.12.5",
    "sqlalchemy>=2.0.49",
    "uvicorn[standard]>=0.44.0",
]

[project.scripts]
l1br3-api = "app.main:run"
l1br3-mcp = "app.mcp_server:main"

[dependency-groups]
dev = [
    "pyinstaller>=6.19.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=0.24",
    "pytest-httpx>=0.30",
    "pre-commit>=3.0.0",
]
lint = [
    "ruff>=0.9.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "mypy>=1.10.0",
    "pylint>=3.2.0",
]

[tool.ruff]
target-version = "py312"
line-length = 120
indent-width = 4
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "YTT", # flake8-2020
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]
per-file-ignores = {}
unfixable = []
exclude = [
    ".venv",
    "__pycache__",
    ".git",
    "migrations",
    "dist",
    "build",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.black]
target-version = ['py312']
line-length = 120
skip-string-normalization = true

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
